[gd_scene load_steps=21 format=3 uid="uid://cv7j0ktgxsopp"]

[ext_resource type="Script" path="res://scenes/Towers/Ballista/ballista.gd" id="1_628jk"]
[ext_resource type="Script" path="res://scenes/Towers/Ballista/range.gd" id="2_bndwu"]
[ext_resource type="Texture2D" uid="uid://o8b6ta3uhh7c" path="res://assets/Towerpack3/Towers bases/PNGs/Tower 06.png" id="3_rqd5c"]
[ext_resource type="Texture2D" uid="uid://cctiapxyrythh" path="res://assets/Towerpack3/Towers Weapons/Tower 06/Spritesheets/Tower 06 - Level 03 - Weapon.png" id="6_m67k7"]
[ext_resource type="Texture2D" uid="uid://dt5mb12s8ul85" path="res://assets/HealthBar/Textures/Bar 3/LoadingBar_3_Background.png" id="7_adswl"]
[ext_resource type="Script" path="res://scenes/Towers/Ballista/projection_spawner.gd" id="7_pbiin"]
[ext_resource type="PackedScene" uid="uid://7pcmthq5y188" path="res://scenes/Towers/Ballista/Arrow.tscn" id="8_h8cbe"]
[ext_resource type="Texture2D" uid="uid://ddlbi8bp6kic3" path="res://assets/HealthBar/Textures/Bar 3/LoadingBar_3_Fill_Green.png" id="8_n1pip"]

[sub_resource type="CircleShape2D" id="CircleShape2D_3bvcj"]
radius = 600.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i0fvt"]
bg_color = Color(0.705882, 0.705882, 0.705882, 0.470588)
corner_radius_top_left = 999
corner_radius_top_right = 999
corner_radius_bottom_right = 999
corner_radius_bottom_left = 999

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cyikj"]
size = Vector2(64, 64)

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_tpb8r"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_6raab"]

[sub_resource type="AtlasTexture" id="AtlasTexture_0kvxm"]
atlas = ExtResource("6_m67k7")
region = Rect2(288, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_7utml"]
atlas = ExtResource("6_m67k7")
region = Rect2(384, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_rv3xj"]
atlas = ExtResource("6_m67k7")
region = Rect2(480, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_1y7f5"]
atlas = ExtResource("6_m67k7")
region = Rect2(0, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_shrbw"]
atlas = ExtResource("6_m67k7")
region = Rect2(96, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_y1m3b"]
atlas = ExtResource("6_m67k7")
region = Rect2(192, 0, 96, 96)

[sub_resource type="SpriteFrames" id="SpriteFrames_bpfjy"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0kvxm")
}, {
"duration": 30.0,
"texture": SubResource("AtlasTexture_7utml")
}, {
"duration": 30.0,
"texture": SubResource("AtlasTexture_rv3xj")
}, {
"duration": 30.0,
"texture": SubResource("AtlasTexture_1y7f5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_shrbw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y1m3b")
}],
"loop": false,
"name": &"Attack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0kvxm")
}],
"loop": false,
"name": &"Idle",
"speed": 10.0
}]

[node name="Ballista" type="StaticBody2D" groups=["Tower"]]
script = ExtResource("1_628jk")
health = 1600

[node name="Range" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 3
script = ExtResource("2_bndwu")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Range"]
shape = SubResource("CircleShape2D_3bvcj")

[node name="RangeIndicator" type="Panel" parent="."]
visible = false
z_index = -1
offset_left = -600.0
offset_top = -600.0
offset_right = 600.0
offset_bottom = 600.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_i0fvt")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_cyikj")

[node name="HealthBar" type="TextureProgressBar" parent="."]
offset_left = -51.0
offset_top = -109.0
offset_right = 1807.0
offset_bottom = 23.0
scale = Vector2(0.055, 0.2)
value = 100.0
texture_under = ExtResource("7_adswl")
texture_progress = ExtResource("8_n1pip")
texture_progress_offset = Vector2(100, 42)

[node name="Base" type="Sprite2D" parent="."]
material = SubResource("CanvasItemMaterial_tpb8r")
position = Vector2(0, -32)
texture = ExtResource("3_rqd5c")
region_enabled = true
region_rect = Rect2(128, 0, 64, 128)

[node name="Weapon" type="AnimatedSprite2D" parent="."]
material = SubResource("CanvasItemMaterial_6raab")
position = Vector2(0, -61)
scale = Vector2(1.3, 1.3)
sprite_frames = SubResource("SpriteFrames_bpfjy")
animation = &"Idle"

[node name="ProjectionSpawner" type="Node2D" parent="Weapon"]
position = Vector2(0, -28.4615)
scale = Vector2(0.666667, 0.666667)
script = ExtResource("7_pbiin")
projection = ExtResource("8_h8cbe")

[node name="MouseArea" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="MouseArea"]
polygon = PackedVector2Array(-26, -89, 26, -89, 26, -61, 32, -29, 32, 32, -32, 32, -32, -32, -26, -61)

[connection signal="add_target" from="." to="." method="_on_add_target"]
[connection signal="remove_target" from="." to="." method="_on_remove_target"]
[connection signal="take_damage" from="." to="." method="_on_take_damage"]
[connection signal="body_entered" from="Range" to="Range" method="_on_body_entered"]
[connection signal="body_exited" from="Range" to="Range" method="_on_body_exited"]
[connection signal="frame_changed" from="Weapon" to="." method="_on_weapon_frame_changed"]
[connection signal="spawn" from="Weapon/ProjectionSpawner" to="Weapon/ProjectionSpawner" method="_on_spawn"]
[connection signal="mouse_entered" from="MouseArea" to="." method="_on_mouse_area_mouse_entered"]
[connection signal="mouse_exited" from="MouseArea" to="." method="_on_mouse_area_mouse_exited"]
